--- a/osx.yml
+++ b/osx.yml
@@ -12,6 +12,7 @@
       homebrew: name={{ item }} state=present
       with_items:
         - ack
+        - awscli
         - ctags
         - hub
         - phantomjs
