--- a/osx.yml
+++ b/osx.yml
@@ -74,3 +74,7 @@
 
     - name: Ensure ~/code exists
       file: path={{ "~/code" | expanduser }} state=directory
+
+    - name: Install python packages
+      become: yes
+      pip: name=boto state=present
