--- a/osx.yml
+++ b/osx.yml
@@ -41,6 +41,7 @@
     - name: Install Casks
       homebrew_cask: name={{ item }} state=present
       with_items:
+        - atom
         - cord
         - dropbox
         - firefox
